# baish

./: .env.example  .gitignore  MANIFEST.in  README.md  main.py  publish_to_pypi.md  pyproject.toml
baish/: main.py
